HEAD
	+ Non-ASCII characters ban fully enforced, fixed problem in chmod
	  mode when reinstalling package
2.0.4
	+ Packaging fixes and natty support
2.0.3
	+ Services certificates are stored in backups
2.0.2
	+ Bugfix: Certificate generation works now when the base directory doesn't
	  exist
2.0.1
	+ Certificates can be reissued after expiration or revocation
1.5.4
	+ Zentyal rebrand
1.5.3
	+ Fixed CA server error in user corner
1.5.2
	+ Adds setServiceRO and updateCN methods to Certificates
	+ Allow new subjAltNames on renewCertificate, disabled there a
	  broken external excepcion
1.5.1
	+ Generate PKCS12 keystore with private key and certificate using
	  empty export password and add it to download archive
	+ Bugfix: Only ASCII alphanumeric characters are allowed in common
	  name to workaround the yet not fixed issue with UTF-8 and OpenSSL
	+ Give support for subject alternative names: the available types
	  are DNS, IP address and email address
	+ Add revokation reason listing certificates
	+ Fix enconding for CA HTML templates
	+ Cancel button works again when revoking and renewing a certificate
	+ Bugfix: DIRMODE changed to 0751 and migration script to fix existing
	  deployments
1.3.14
	+ Add custom module status section
1.3.13
	+ Bugfix: Service certificates are issued again if they were
	  revoked or they expired
	+ Service certificates are issued using CA expiration date
	+ Adding some help text to Service certificates model
1.1.30
	+ Do not show CA in module status
	+ Do not show a restart button for CA
1.1.20
	+ Allow same expiration days for CA and new issued certificates
	  setting to latter ones the same expiration date that CA one has
1.1.10
	+ Generate CRL at CA startup and correct CRL names
1.1.0
	+ Allow * character in common names
	+ Updating in certificate authority DB is now working to show
	expired certificates in the list and call observer when this
	event happens
	+ Country code, state and locality fields for CA certificate are