@@ -1,6 +1,7 @@
 HEAD
 	+ Non-ASCII characters ban fully enforced, fixed problem in chmod
 	  mode when reinstalling package
+	+ Added more CN related option to services certificates
 2.0.4
 	+ Packaging fixes and natty support
 2.0.3
